// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification component should render correctly 1`] = `
<div>
  <div
    class="pf-v6-c-alert pf-m-success notification-item"
    data-ouia-component-id="OUIA-Generated-Alert-success-:r0:"
    data-ouia-component-type="PF6/Alert"
    data-ouia-safe="true"
    id="Foo"
  >
    <div
      class="pf-v6-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </div>
    <h4
      class="pf-v6-c-alert__title"
    >
      <span
        class="pf-v6-screen-reader"
      >
        Success alert:
      </span>
      Bar
    </h4>
    <div
      class="pf-v6-c-alert__description"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-:r1:"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <small
          class="pf-v6-c-content--small sentry-mask data-hj-suppress"
          data-ouia-component-id="OUIA-Generated-Content-:r2:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          description
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component should render correctly with HTML description 1`] = `
<div>
  <div
    class="pf-v6-c-alert pf-m-success notification-item"
    data-ouia-component-id="OUIA-Generated-Alert-success-:rb:"
    data-ouia-component-type="PF6/Alert"
    data-ouia-safe="true"
    id="Foo"
  >
    <div
      class="pf-v6-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </div>
    <h4
      class="pf-v6-c-alert__title"
    >
      <span
        class="pf-v6-screen-reader"
      >
        Success alert:
      </span>
      Bar
    </h4>
    <div
      class="pf-v6-c-alert__description"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-:rc:"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <small
          class="pf-v6-c-content--small sentry-mask data-hj-suppress"
          data-ouia-component-id="OUIA-Generated-Content-:rd:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Some textanother
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component should render correctly with HTML title 1`] = `
<div>
  <div
    class="pf-v6-c-alert pf-m-success notification-item"
    data-ouia-component-id="OUIA-Generated-Alert-success-:re:"
    data-ouia-component-type="PF6/Alert"
    data-ouia-safe="true"
    id="Foo"
  >
    <div
      class="pf-v6-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </div>
    <h4
      class="pf-v6-c-alert__title"
    >
      <span
        class="pf-v6-screen-reader"
      >
        Success alert:
      </span>
      Some textanother
    </h4>
    <div
      class="pf-v6-c-alert__description"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-:rf:"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <small
          class="pf-v6-c-content--small sentry-mask data-hj-suppress"
          data-ouia-component-id="OUIA-Generated-Content-:rg:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          description
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component should render correctly with dismiss button 1`] = `
<div>
  <div
    class="pf-v6-c-alert pf-m-success notification-item"
    data-ouia-component-id="OUIA-Generated-Alert-success-:rk:"
    data-ouia-component-type="PF6/Alert"
    data-ouia-safe="true"
    id="Foo"
  >
    <div
      class="pf-v6-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </div>
    <h4
      class="pf-v6-c-alert__title"
    >
      <span
        class="pf-v6-screen-reader"
      >
        Success alert:
      </span>
      Bar
    </h4>
    <div
      class="pf-v6-c-alert__action"
    >
      <button
        aria-label="close-notification"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rl:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="pf-v6-c-alert__description"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-:rm:"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <small
          class="pf-v6-c-content--small sentry-mask data-hj-suppress"
          data-ouia-component-id="OUIA-Generated-Content-:rn:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component should render correctly with sentryId 1`] = `
<div>
  <div
    class="pf-v6-c-alert pf-m-success notification-item"
    data-ouia-component-id="OUIA-Generated-Alert-success-:r6:"
    data-ouia-component-type="PF6/Alert"
    data-ouia-safe="true"
    id="Foo"
  >
    <div
      class="pf-v6-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </div>
    <h4
      class="pf-v6-c-alert__title"
    >
      <span
        class="pf-v6-screen-reader"
      >
        Success alert:
      </span>
      Bar
    </h4>
    <div
      class="pf-v6-c-alert__description"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-:r7:"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <small
          class="pf-v6-c-content--small sentry-mask data-hj-suppress"
          data-ouia-component-id="OUIA-Generated-Content-:r8:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          description
        </small>
      </div>
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-:r9:"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <small
          class="pf-v6-c-content--small"
          data-ouia-component-id="OUIA-Generated-Content-:ra:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Tracking Id: 
          some-UUID
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component should render correctly without description 1`] = `
<div>
  <div
    class="pf-v6-c-alert pf-m-success notification-item"
    data-ouia-component-id="OUIA-Generated-Alert-success-:r3:"
    data-ouia-component-type="PF6/Alert"
    data-ouia-safe="true"
    id="Foo"
  >
    <div
      class="pf-v6-c-alert__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
        />
      </svg>
    </div>
    <h4
      class="pf-v6-c-alert__title"
    >
      <span
        class="pf-v6-screen-reader"
      >
        Success alert:
      </span>
      Bar
    </h4>
    <div
      class="pf-v6-c-alert__description"
    >
      <div
        class="pf-v6-c-content"
        data-ouia-component-id="OUIA-Generated-Content-:r4:"
        data-ouia-component-type="PF6/Content"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        <small
          class="pf-v6-c-content--small sentry-mask data-hj-suppress"
          data-ouia-component-id="OUIA-Generated-Content-:r5:"
          data-ouia-component-type="PF6/Content"
          data-ouia-safe="true"
          data-pf-content="true"
        />
      </div>
    </div>
  </div>
</div>
`;
